--- a/Maptest/Maptest/Base.lproj/Main.storyboard
+++ b/Maptest/Maptest/Base.lproj/Main.storyboard
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B17c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,34 +19,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Qvk-dK-E3s">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="311"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Qvk-dK-E3s">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="378.5"/>
+                                <animations/>
                             </mapView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="From" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0e2-GZ-c7h">
-                                <rect key="frame" x="12" y="10" width="86" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="From" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0e2-GZ-c7h">
+                                <rect key="frame" x="12" y="30" width="91.5" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="vAv-oN-c55"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="LSa-wz-Yi7">
-                                <rect key="frame" x="0.0" y="309" width="320" height="259"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="To" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NvU-eq-UP2">
+                                <rect key="frame" x="118" y="30" width="91.5" height="30"/>
+                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="direction" id="qf2-we-lZc">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qf2-we-lZc" id="GvT-FM-L4u">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NvU-eq-UP2">
-                                <rect key="frame" x="113" y="9" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="bXZ-c4-bQu"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRI-b6-LeR">
-                                <rect key="frame" x="216" y="10" width="94" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRI-b6-LeR">
+                                <rect key="frame" x="216" y="30" width="94" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="01Z-Cc-eFO"/>
+                                    <constraint firstAttribute="width" constant="94" id="sHJ-Mm-2go"/>
+                                </constraints>
                                 <state key="normal" title="Using Google">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -52,19 +57,30 @@
                                     <action selector="usingGoogleButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="wBW-W5-2vD"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Current Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhj-5U-kzN">
-                                <rect key="frame" x="12" y="49" width="99" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhj-5U-kzN">
+                                <rect key="frame" x="12" y="71" width="104.5" height="14.5"/>
+                                <animations/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rue-z0-9Hs">
-                                <rect key="frame" x="113" y="45" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="To" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rue-z0-9Hs">
+                                <rect key="frame" x="118" y="64" width="91.5" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hOD-U8-9Ci"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7h-b7-Qcf">
-                                <rect key="frame" x="218" y="44" width="92" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7h-b7-Qcf">
+                                <rect key="frame" x="216" y="64" width="94" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="QEB-VE-bAH"/>
+                                    <constraint firstAttribute="width" constant="94" id="hs1-aZ-a98"/>
+                                </constraints>
                                 <state key="normal" title="Using Apple">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -72,11 +88,54 @@
                                     <action selector="usingAppleButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nbA-mA-jz2"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="LSa-wz-Yi7">
+                                <rect key="frame" x="0.0" y="378" width="320" height="189.5"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="direction" id="qf2-we-lZc">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qf2-we-lZc" id="GvT-FM-L4u">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NvU-eq-UP2" firstAttribute="centerY" secondItem="0e2-GZ-c7h" secondAttribute="centerY" id="5St-wX-NbU"/>
+                            <constraint firstItem="Qvk-dK-E3s" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="8el-8W-8Oq"/>
+                            <constraint firstAttribute="trailing" secondItem="Qvk-dK-E3s" secondAttribute="trailing" id="Erv-P6-7oc"/>
+                            <constraint firstItem="hhj-5U-kzN" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="12" id="H0p-G7-dhb"/>
+                            <constraint firstAttribute="trailing" secondItem="oRI-b6-LeR" secondAttribute="trailing" constant="10" id="HMb-GQ-b4X"/>
+                            <constraint firstAttribute="trailing" secondItem="d7h-b7-Qcf" secondAttribute="trailing" constant="10" id="NgZ-IT-HYF"/>
+                            <constraint firstItem="LSa-wz-Yi7" firstAttribute="top" secondItem="Qvk-dK-E3s" secondAttribute="bottom" id="QJR-pm-z1d"/>
+                            <constraint firstItem="0e2-GZ-c7h" firstAttribute="width" secondItem="NvU-eq-UP2" secondAttribute="width" id="SHq-be-q0a"/>
+                            <constraint firstItem="rue-z0-9Hs" firstAttribute="leading" secondItem="hhj-5U-kzN" secondAttribute="trailing" constant="2" id="UtW-Di-bXa"/>
+                            <constraint firstItem="d7h-b7-Qcf" firstAttribute="leading" secondItem="rue-z0-9Hs" secondAttribute="trailing" constant="6" id="V8D-2T-HZT"/>
+                            <constraint firstItem="d7h-b7-Qcf" firstAttribute="centerY" secondItem="rue-z0-9Hs" secondAttribute="centerY" id="XSW-iv-HpN"/>
+                            <constraint firstItem="LSa-wz-Yi7" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="ZG0-cA-93C"/>
+                            <constraint firstItem="Qvk-dK-E3s" firstAttribute="height" secondItem="LSa-wz-Yi7" secondAttribute="height" multiplier="2" id="aOS-qw-fJx"/>
+                            <constraint firstItem="d7h-b7-Qcf" firstAttribute="top" secondItem="oRI-b6-LeR" secondAttribute="bottom" constant="4" id="ckv-ab-8L3"/>
+                            <constraint firstItem="0e2-GZ-c7h" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="12" id="dcN-b3-O62"/>
+                            <constraint firstItem="Qvk-dK-E3s" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="egJ-Wi-ljQ"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="LSa-wz-Yi7" secondAttribute="bottom" id="hN8-Mn-nEq"/>
+                            <constraint firstItem="rue-z0-9Hs" firstAttribute="centerY" secondItem="hhj-5U-kzN" secondAttribute="centerY" id="iLa-hh-qaB"/>
+                            <constraint firstAttribute="trailing" secondItem="LSa-wz-Yi7" secondAttribute="trailing" id="iic-cw-BSO"/>
+                            <constraint firstItem="NvU-eq-UP2" firstAttribute="centerY" secondItem="oRI-b6-LeR" secondAttribute="centerY" id="jex-Jj-8YY"/>
+                            <constraint firstItem="oRI-b6-LeR" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="10" id="lvV-8X-BNN"/>
+                            <constraint firstItem="NvU-eq-UP2" firstAttribute="leading" secondItem="0e2-GZ-c7h" secondAttribute="trailing" constant="15" id="o6P-o3-UMW"/>
+                            <constraint firstItem="NvU-eq-UP2" firstAttribute="width" secondItem="rue-z0-9Hs" secondAttribute="width" id="yQU-kx-HjF"/>
+                            <constraint firstItem="oRI-b6-LeR" firstAttribute="leading" secondItem="NvU-eq-UP2" secondAttribute="trailing" constant="6" id="zqM-4h-KmH"/>
+                        </constraints>
                     </view>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="568"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="mapView" destination="Qvk-dK-E3s" id="u8s-vD-Tel"/>
                         <outlet property="tableView" destination="LSa-wz-Yi7" id="zjd-SQ-2dq"/>
@@ -87,6 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="360" y="291"/>
         </scene>
     </scenes>
 </document>
